--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,7 @@
 	<title>homepage</title>
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="homepage.css">
-	<script src="jquery-2.2.3.js"></script>
+	<script src="jq.js"></script>
 	<script src="homepage.js"></script>
 </head>
 <body>
